@@ -61,11 +61,11 @@ public interface JbstMongoUsersRepository extends MongoRepository<JbstMongoUser,
     }
 
     default JbstUsers findUsers() {
-        return new JbstUsers(this.findAll().stream().map(JbstMongoUser::asJbstUser).collect(Collectors.toList()));
+        return new JbstUsers(this.findAll().stream().map(JbstMongoUser::asJbstUser).toList());
     }
 
     default JbstUsers findUsersExcept(Username username) {
-        return new JbstUsers(this.findByUsernameNot(username).stream().map(JbstMongoUser::asJbstUser).collect(Collectors.toList()));
+        return new JbstUsers(this.findByUsernameNot(username).stream().map(JbstMongoUser::asJbstUser).toList());
     }
 
     default void confirmEmail(Email email) {
