@@ -34,7 +34,6 @@ import org.springframework.web.socket.config.annotation.StompWebSocketEndpointRe
 
 import java.lang.reflect.Method;
 import java.util.Set;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -154,7 +153,7 @@ class JbstConfigurationSecurityJwtTest {
         // Act
         var methods = Stream.of(this.componentUnderTest.getClass().getMethods())
                 .map(Method::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         // Assert
         assertThat(methods)
