@@ -18,7 +18,6 @@ import org.springframework.web.servlet.config.annotation.PathMatchConfigurer;
 
 import java.lang.reflect.Method;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -53,7 +52,7 @@ class JbstConfigurationSecurityJwtWebMVCTest {
         // Act
         var methods = Stream.of(this.componentUnderTest.getClass().getMethods())
                 .map(Method::getName)
-                .collect(Collectors.toList());
+                .toList();
 
         // Assert
         assertThat(methods)
