@@ -7,7 +7,6 @@ import lombok.extern.slf4j.Slf4j;
 import org.junit.jupiter.api.Test;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static jbst.foundation.domain.tests.JbstUnitTests.IO.read;
 
@@ -32,7 +31,7 @@ class JbstGeoUtilsFlagsConsoleTest extends JbstUnitTests.Runners.BaseFolder {
         var flagsFulls = OBJECT_MAPPER.readValue(flagsFullsJSON, typeReference);
         var flags = flagsFulls.stream()
                 .map(flag -> new CountryFlagMin(flag.code(), flag.emoji()))
-                .collect(Collectors.toList());
+                .toList();
         var flagsJSON = OBJECT_MAPPER.writeValueAsString(flags);
         LOGGER.info(flagsJSON);
     }
